--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@distube/ytdl-core": "^4.14.4",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase-admin": "^12.3.0",
-    "ytdl-core": "^4.11.5"
+    "firebase-admin": "^12.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
